--- a/fruit.css
+++ b/fruit.css
@@ -6,6 +6,7 @@
 }
 body {
   font-family: "Poppins", serif;
+  overflow: hidden;
 }
 section {
   display: flex;
@@ -17,9 +18,14 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 1.5rem;
+  color: black;
+  font-weight: bolder;
+  font-size: 1.5rem;
 }
 .see {
   color: green;
+  font-size: 1.5rem;
 }
 .duct {
   /* background-color: red; */
@@ -27,10 +33,6 @@ section {
   grid-template-columns: repeat(2, 1fr);
   gap: 0.3rem;
   padding-top: 1rem;
-  /* @media (max-width: 585px) {
-    grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
-    gap: rem;
-  } */
 }
 .duct1 {
   /* background-color: green; */
@@ -40,7 +42,9 @@ section {
   flex-direction: column;
   gap: 0.7rem;
 }
-
+.mango1 {
+  color: green;
+}
 .mang {
   width: 220px;
   height: 180px;
@@ -70,4 +74,5 @@ section {
   border-radius: 0.5rem;
   padding: 0.4rem 1rem;
   width: 50%;
+  color: white;
 }
