--- a/fruit.css
+++ b/fruit.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: "Poppins", serif;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 section {
   display: flex;
@@ -18,19 +18,20 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1.5rem;
-  color: black;
-  font-weight: bolder;
-  font-size: 1.5rem;
+  padding: 1rem 1.5rem;
 }
 .see {
   color: green;
-  font-size: 1.5rem;
 }
 .duct {
   /* background-color: red; */
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  gap: 0.3rem;
+  padding: 1rem;
+  @media (max-width: 585px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
   gap: 0.3rem;
   padding-top: 1rem;
 }
@@ -42,9 +43,7 @@ section {
   flex-direction: column;
   gap: 0.7rem;
 }
-.mango1 {
-  color: green;
-}
+
 .mang {
   width: 220px;
   height: 180px;
@@ -75,4 +74,50 @@ section {
   padding: 0.4rem 1rem;
   width: 50%;
   color: white;
+}
+.duct2 {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.7rem;
+  border-radius: 2rem;
+  background-color: green;
+  color: white;
+}
+.mango {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+}
+.mangg {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+.duct3 {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.7rem;
+  border-radius: 2rem;
+  background-color: blue;
+  color: white;
+}
+.mango {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+}
+.mangg {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 1rem;
 }
