--- a/fruit.css
+++ b/fruit.css
@@ -18,7 +18,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
 }
 .see {
   color: green;
@@ -98,6 +98,16 @@ section {
   object-fit: cover;
   border-radius: 1rem;
 }
+.offer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media (max-width: 585px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
 .duct3 {
   padding: 1rem;
   display: flex;
