--- a/pro.css
+++ b/pro.css
@@ -7,7 +7,7 @@
 body {
   font-family: "Poppins", serif;
   background-color: bisque;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 section {
   /* background-color: white; */
