--- a/pro.css
+++ b/pro.css
@@ -8,7 +8,7 @@ body {
   font-family: "Poppins", serif;
   background-color: azure;
   /* overflow: hidden; */
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
 }
 nav {
   background-color: rgba(255, 228, 196, 0.307);
@@ -59,7 +59,7 @@ nav {
 form {
   /* background-color: rgba(163, 157, 157, 0.436); */
   background-color: rgba(163, 157, 157, 0.318);
-  width: 50%;
+  width: 100%;
   font-weight: bolder;
   margin-top: 1rem;
   border-radius: 0.5rem;
@@ -87,7 +87,7 @@ section {
   /* background-color: white; */
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  /* justify-items: center; */
   align-items: center;
   gap: 0.5rem;
   color: black;
@@ -99,14 +99,14 @@ section {
   display: flex;
   flex-direction: column;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 0.5rem;
-  padding: 1rem;
-  @media (max-width: 585px) {
+  /* padding: 1rem; */
+  /* @media (max-width: 585px) {
     grid-template-columns: repeat(2, 1fr);
     /* padding: 1rem 1.5rem; */
-  }
 }
+
 .detail1 {
   display: flex;
   flex-direction: column;
