--- a/fruit.css
+++ b/fruit.css
@@ -6,10 +6,11 @@
 }
 body {
   font-family: "Poppins", serif;
-  padding: 1rem;
+  /* padding: 1rem; */
   /* overflow: hidden; */
 }
 nav {
+  /* width: 100%; */
   background-color: rgba(255, 228, 196, 0.307);
   display: flex;
   align-items: center;
@@ -101,18 +102,13 @@ section {
 .duct {
   /* background-color: red; */
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 0.3rem;
-  padding: 1rem;
-  @media (max-width: 585px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  gap: 0.3rem;
-  padding-top: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  gap: 0.9rem;
 }
 .duct1 {
   /* background-color: green; */
   /* width: 20%; */
+  width: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -120,15 +116,15 @@ section {
 }
 
 .mang {
-  width: 220px;
-  height: 180px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border-radius: 0.5rem;
 }
 
 .star {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   /* background-color: blueviolet; */
   gap: 1rem;
 }
@@ -140,20 +136,21 @@ section {
 }
 .stock {
   display: flex;
-  gap: 6.5rem;
+  gap: 0.5rem;
+  flex-direction: column;
 }
 .addd {
   background-color: green;
   border: none;
   border-radius: 0.5rem;
   padding: 0.4rem 1rem;
-  width: 50%;
+  width: 100%;
   color: white;
 }
 .duct2 {
   padding: 1rem;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: space-between;
   gap: 0.7rem;
@@ -181,28 +178,4 @@ section {
     flex-direction: column;
     gap: 1rem;
   }
-}
-
-.duct3 {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.7rem;
-  border-radius: 2rem;
-  background-color: blue;
-  color: white;
-}
-.mango {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-  gap: 1rem;
-}
-.mangg {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 1rem;
 }
